[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "NFT floor sniper"
authors = ["infinitEnigma@github.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
discord = "^1.7.3"
requests = "^2.28.1"
selenium = "^4.3.0"
Flask = "^2.2.1"
twitter = "^1.19.3"
nest-asyncio = "^1.5.5"
gspread = "^5.4.0"
oauth2client = "^4.1.3"
Pillow = "^9.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"